<resources>
    <string name="app_name">music.app</string>
    <string name="please">Please sign in to start playing:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUpU"><u>Sign up</u></string>
    <string name="guest">Play as Guest</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="money">4200</string>
    <string name="store">Store</string>
    <string name="play">Play</string>
    <string name="playf">Play with Friends</string>
    <string name="themes">Themes</string>
    <string name="search">search…</string>
    <string name="tags"><u>show tags</u></string>
    <string name="random">Random</string>
    <string name="tag">Tags</string>
    <string name="tagRandom"><u>#random</u></string>
    <string name="rules">Rules</string>
    <string name="gameDuration">Game Duration</string>
    <string name="numOfSongs">8 Songs</string>
    <string name="roundDuration">Round Duration</string>
    <string name="noteOfPlayer">Number of Players</string>
    <string name="numOfPlayer">4 Players</string>
    <string name="time10">10s</string>
    <string name="time15">15s</string>
    <string name="time20">20s</string>
    <string name="start">Start</string>
    <string name="second">2nd</string>
    <string name="guess">Guess the song</string>
    <string name="meAndMichael">Me and Michael</string>
    <string name="littleDarkAge">Little Dark Age</string>
    <string name="electricFeel">Electric Feel</string>
    <string name="kids">Kids</string>
    <string name="result">Result</string>
    <string name="nickname">Nikita132</string>
    <string name="exp">exp</string>
    <string name="numOfExp">+30</string>
    <string name="numOfMoney">+60</string>
    <string name="level">Level 19</string>
    <string name="numExp">200/255</string>
    <string name="placeRes">2nd Place</string>
    <string name="reward">Your reward:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="history">Music History</string>
    <string name="points">120pts</string>
    <string name="place">1st</string>
    <string name="mgmt">MGMT</string>
    <string name="number">1.</string>
    <string name="profile">Profile</string>
    <string name="friendList">Friend List</string>
    <string name="inventory">Inventory</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="lobby">Lobby</string>
    <string name="ready">Ready</string>
    <string name="players">Players</string>
    <string name="playersInLobby">2/6</string>
    <string name="relaxation">Relaxation</string>
    <string name="listofplayers">List of players</string>
    <string name="songstitle">The Song Title</string>
    <string name="zeropts">0 pts</string>
    <string name="numofround">Round 1</string>
    <string name="you">You</string>
    <string name="randEng">Random English</string>
    <string name="randRus">Random Russian</string>



</resources>