<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientback"
    tools:context=".MainActivity">

    <View
        android:id="@+id/noteback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/noteback" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">


        <ImageView
            android:visibility="invisible"
            android:id="@+id/home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/home"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />
        <View
            android:layout_width="48dp"
            android:layout_height="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="-1dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/avatarAll"
                android:layout_marginTop="-60dp"
                android:background="@drawable/whiteback" />

            <RelativeLayout
                android:id="@+id/avatarAll"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:padding="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/avatar"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

        </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/whitebackreverse">
        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:text="@string/you"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="28sp" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:text="@string/placeRes"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/second"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingHorizontal="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/level"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/overpass"
                    android:text="@string/level"
                    android:textAlignment="viewStart"
                    android:textColor="@color/gray"
                    android:textSize="24sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/numExp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/overpass"
                    android:text="@string/numExp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="24sp" />

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:progress="70"
                android:progressDrawable="@drawable/greenprogress" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/overpass"
            android:gravity="center"
            android:text="@string/money"
            android:textAlignment="center"
            android:textColor="@color/purpleW"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/coin2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="14dp"
            app:srcCompat="@drawable/coin"
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass"
        android:text="@string/reward"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numOfExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass"
                    android:text="@string/numOfExp"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/exp"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/exp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/overpass"
                    android:text="@string/exp"
                    android:textAllCaps="false"
                    android:textColor="@color/exp"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coins"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:fontFamily="@font/overpass"
                    android:text="@string/numOfMoney"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/purpleW"
                    android:textSize="48sp" />

                <ImageView
                    android:id="@+id/coin"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/coin"
                    tools:ignore="ContentDescription" />


            </LinearLayout>


        </LinearLayout>
</LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <Button
            android:visibility="invisible"
            android:id="@+id/leaderboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/button"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/black"
            android:text="@string/leaderboard"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:visibility="invisible"
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/button"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/black"
            android:text="@string/history"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>