<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientback"
    tools:context=".MainActivity">

    <View
        android:id="@+id/noteback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/noteback" />
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal"
        android:maxWidth="480dp"
        android:maxHeight="48dp">


        <ImageView
            android:id="@+id/arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
             />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:text="@string/rules"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />
        <View
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="0dp"/>




    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/whitelistsec"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/textGame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/overpass"
                    android:gravity="center"
                    android:text="@string/gameDuration"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <SeekBar
                    android:id="@+id/gameDuration"
                    style="@android:style/Widget.DeviceDefault.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:indeterminate="false"
                    android:max="8"
                    android:progress="4"
                    android:progressDrawable="@drawable/seekbarback"
                    android:progressTint="@color/purpleB"
                    android:thumb="@drawable/slider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/gameDurationText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@drawable/board"
                        android:fontFamily="@font/overpass"
                        android:gravity="center"
                        android:text="@string/numOfSongs"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/whitelistsec"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/roundDuration"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/overpass"
                    android:gravity="center"
                    android:text="@string/roundDuration"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/timeButt10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@drawable/actrule"
                        android:fontFamily="@font/overpass"
                        android:text="@string/time10"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="28sp" />


                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/timeButt15"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@drawable/actrulenon"
                        android:fontFamily="@font/overpass"
                        android:text="@string/time15"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/timeButt20"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@drawable/actrulenon"
                        android:fontFamily="@font/overpass"
                        android:text="@string/time20"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="28sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/whitelistsec"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/noteOfPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/overpass"
                    android:gravity="center"
                    android:text="@string/noteOfPlayer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <SeekBar
                    android:id="@+id/playerNum"
                    style="@android:style/Widget.DeviceDefault.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:indeterminate="false"
                    android:max="4"
                    android:progress="2"
                    android:progressDrawable="@drawable/seekbarback"
                    android:progressTint="@color/purpleB"
                    android:thumb="@drawable/slider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/playerNumText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@drawable/board"
                        android:fontFamily="@font/overpass"
                        android:gravity="center"
                        android:text="@string/numOfPlayer"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/startButt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/button"
                android:fontFamily="@font/overpass"
                android:shadowColor="@color/black"
                android:text="@string/start"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>